# proposal-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  case_study_presentation.md  case_study_report.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
core/: config.py  constants.py  logger.py
data/template/: template.pptx  ~$template.pptx
docs/: HLD.md  LLD.md  PRD.md
frontend/: index.html  styles.css
src/api/: main.py
src/graph/: builder.py  state.py
src/graph/agents/: __init__.py  critic.py  planner.py
src/graph/nodes/: __init__.py  generation.py  parse.py  ppt.py  retrieval.py  validation.py
src/schemas/: state_schema.py
src/scripts/: evaluate_pipeline.py  index_documents.py
src/services/: __init__.py
src/services/evaluation/: __init__.py  feedback_store.py  metrics.py  ragas_eval.py
src/services/generation/: __init__.py  chat_updater.py  prompt_optimizer.py  prompt_templates.py  proposal_generator.py
src/services/guardrails/: hallucination.py  validation.py
src/services/ingestion/: chunking.py  folder_watcher.py  loaders.py  preprocess.py  reindex_service.py  rfp_parser.py
src/services/llm/: ollama_factory.py
src/services/ppt/: __init__.py  ppt_builder.py
src/services/retrieval/: query_rewriter.py  retrieval_service.py  vector_store.py
tests/: test_chunking.py
tests/evaluation/: test_ragas.py
tests/integration/: test_pipeline.py
tests/unit/: test_section_parser.py
